...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/register_layout"
    tools:context="qaworkshops.android.netguru.co.qaworshopsandroid.feature.register.registerActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

...
                android:id="@+id/last_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

...
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

...
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddItemTextInputStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
...
                android:text="@string/your_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthday_text_view" />

            <Button
                android:id="@+id/set_birthday_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_set_birthday"
                android:textStyle="bold" />
...
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radio_group">

                <RadioButton
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male_radio_button"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:id="@+id/other_radio_button"
                    android:layout_weight="1" />
            </RadioGroup>

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
...
