...
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="set_birthday_error">You need to set birthday first</string>
...
    <string name="dialog_fragment_add_new_item_title">Add new item</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_fragment_add_new_item">Enter item name</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="action_set_birthday">Set birthdate</string>
    <string name="select_country">Select Country</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register_new_account">Do not have an account? Register</string>
    <string name="have_account_sign_in">Already have an account? Sign in</string>
    <string name="login_data_incorrect">Provided login data is incorrect</string>
    <string name="your_birthday">Your birthday</string>
    <string-array name="countries_array">
        <item>Poland</item>
        <item>UK</item>
...
